--- a/renovate.json
+++ b/renovate.json
@@ -3,10 +3,15 @@
   "extends": [
     "config:recommended"
   ],
-  "automerge": true,
-  "automergeType": "pr",
+  "packageRules": [
+    {
+      "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ],
+  "automergeType": "branch",
   "automergeStrategy": "auto",
+  "platformAutomerge": true,
   "baseBranches": ["main"],
-  "updateNotScheduled": false,
   "commitMessagePrefix": "chore(deps): "
 }
