chore(workflow): add workflows

--- a/renovate.json
+++ b/renovate.json
@@ -8,5 +8,6 @@
   "rangeStrategy": "bump",
   "rebaseLabel": "rebase",
   "rebaseWhen": "auto",
+  "platformAutomerge": true,
   "requiredStatusChecks": []
 }
