--- a/ocean/package.json
+++ b/ocean/package.json
@@ -12,8 +12,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "valaxy": "0.19.0",
-    "valaxy-theme-sakura": "0.6.4"
+    "valaxy": "^0.19.4",
+    "valaxy-theme-sakura": "0.6.6"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
