--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "packageManager": "pnpm@9.11.0",
   "homepage": "https://sakura.valaxy.site",
   "scripts": {
     "dev": "lerna run dev",
